SonarLint issue fixed. - Deprecated Class.newInstance() method replaced by suggested alternative.